<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profil_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/Agnes"
        android:contentDescription="@string/cd_profile"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_mask"
        android:clipToOutline="true"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_nim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_origin_major"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/origin_and_major"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_link_text"
        android:autoLink="web"
        android:linksClickable="true"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_origin_major"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_hobbies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hobbies_joined"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_quote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quote"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tv_hobbies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btn_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_quote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_share"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_share"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_quote"
        app:layout_constraintStart_toEndOf="@+id/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
